# package-intelligence-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  workspace.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-db.sh  post-create.sh
deploy/: .env.example  Dockerfile  dagster.yaml  docker-compose.yml  init-db.sh
src/nuget_pipeline/: config.py
src/nuget_pipeline/dagster_defs/: asset_checks.py  assets.py  definitions.py  schedules.py  sensors.py
src/nuget_pipeline/db/: connection.py  migrate.py
src/nuget_pipeline/db/migrations/: 001_initial.sql  002_sync_runs_heartbeat.sql  003_nuget_versions_deleted_at.sql  004_enriched_oss_status.sql
src/nuget_pipeline/enrich/: classifier.py  oss_status.py
src/nuget_pipeline/sync/: backfill_deletes.py  framework.py  nuget.py  spdx.py
src/nuget_pipeline/utils/: concurrency.py  http.py  logging.py
tests/: conftest.py  test_dagster_asset.py  test_defs_structure.py  test_nuget_sync.py  test_oss_classifier.py  test_oss_status_sync.py  test_spdx_sync.py  test_sync_framework.py
