[project]
name = "nuget-pipeline"
version = "0.1.0"
description = "NuGet registry data pipeline with Dagster orchestration"
requires-python = ">=3.12"
authors = [{ name = "Suneel Shastry" }]
license = { text = "Proprietary — All Rights Reserved. See LICENSE." }
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "psycopg[binary,pool]>=3.2",
    "structlog>=24.4",
    "packageurl-python>=0.15",
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "dagster-postgres>=0.25",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuget_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.dagster]
module_name = "nuget_pipeline.dagster_defs.definitions"
code_location_name = "nuget_pipeline"
